--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,22 @@
 {
-	"name": "YT_FCKK",
-	"description": "Crowd Sourced Fact Checker for YouTube",
-	"version": "1.0",
-	"manifest_version": 3,
-	"action": {
-		"default_popup": ""
-		"default_icon" : ""
-	}
+    "name": "YouTube Fact Checker",
+    "description": "Crowd Sourced Fact Checker for YouTube",
+    "version": "1.0",
+    "manifest_version": 3,
+    "permissions": ["activeTab", "scripting", "tabs", "storage"],
+    "host_permissions": ["https://www.youtube.com/watch?=*"],
+    "action": {
+        "default_popup": "popup.html",
+        "default_icon": ""
+    },
+    "background": {
+        "service_worker": "background.js"
+    },
+    "content_scripts": [
+        {
+            "matches": ["https://www.youtube.com/watch?=*"],
+            "js": ["content.js"]
+        }
+    ]
 }
+
